check in ges-track-overlay.{c,h}

--- a/ges/Makefile.am
+++ b/ges/Makefile.am
@@ -34,6 +34,7 @@ libges_@GST_MAJORMINOR@_la_SOURCES = 		\
 	ges-track-title-source.c			\
 	ges-track-video-title-source.c			\
 	ges-track-audio-title-source.c			\
+	ges-track-overlay.c			\
 	ges-utils.c
 
 libges_@GST_MAJORMINOR@includedir = $(includedir)/gstreamer-@GST_MAJORMINOR@/ges/
@@ -66,6 +67,7 @@ libges_@GST_MAJORMINOR@include_HEADERS = 	\
 	ges-track-title-source.h			\
 	ges-track-video-title-source.h			\
 	ges-track-audio-title-source.h			\
+	ges-track-overlay.h			\
 	ges-utils.h
 
 libges_@GST_MAJORMINOR@_la_CFLAGS = -I$(top_srcdir) $(GST_PROFILE_CFLAGS) $(GST_DISCOVERER_CFLAGS) $(GST_CONTROLLER_CFLAGS) $(GST_PLUGINS_BASE_CFLAGS) $(GST_CFLAGS)
