--- a/ges/Makefile.am
+++ b/ges/Makefile.am
@@ -32,7 +32,7 @@ libges_@GST_MAJORMINOR@_la_SOURCES = 		\
 	ges-track-video-background-source.c			\
 	ges-track-audio-background-source.c			\
 	ges-track-title-source.c			\
-	ges-track-video-overlay.c			\
+	ges-track-text-overlay.c			\
 	ges-utils.c
 
 libges_@GST_MAJORMINOR@includedir = $(includedir)/gstreamer-@GST_MAJORMINOR@/ges/
@@ -63,7 +63,7 @@ libges_@GST_MAJORMINOR@include_HEADERS = 	\
 	ges-track-video-background-source.h			\
 	ges-track-audio-background-source.h			\
 	ges-track-title-source.h			\
-	ges-track-video-overlay.h			\
+	ges-track-text-overlay.h			\
 	ges-utils.h
 
 libges_@GST_MAJORMINOR@_la_CFLAGS = -I$(top_srcdir) $(GST_PROFILE_CFLAGS) $(GST_DISCOVERER_CFLAGS) $(GST_CONTROLLER_CFLAGS) $(GST_PLUGINS_BASE_CFLAGS) $(GST_CFLAGS)
