check in skeletal ges-enums.{c,h}

--- a/ges/Makefile.am
+++ b/ges/Makefile.am
@@ -9,6 +9,7 @@ CLEANFILES = $(BUILT_SOURCES) $(built_header_make) $(built_source_make)
 
 libges_@GST_MAJORMINOR@_la_SOURCES = 		\
 	ges.c					\
+	ges-enums.c					\
 	ges-custom-timeline-source.c		\
 	ges-simple-timeline-layer.c		\
 	ges-timeline.c				\
@@ -40,6 +41,7 @@ libges_@GST_MAJORMINOR@includedir = $(includedir)/gstreamer-@GST_MAJORMINOR@/ges
 libges_@GST_MAJORMINOR@include_HEADERS = 	\
 	ges-types.h				\
 	ges.h					\
+	ges-enums.h					\
 	ges-custom-timeline-source.h		\
 	ges-internal.h				\
 	ges-simple-timeline-layer.h		\
