theoraenc: Implement two pass encoding
Fixes bug #621349.

--- a/ext/theora/Makefile.am
+++ b/ext/theora/Makefile.am
@@ -9,10 +9,11 @@ libgsttheora_la_SOURCES = gsttheora.c \
 			  gsttheoradec.c \
 			  gsttheoraparse.c
 
-libgsttheora_la_CFLAGS = $(GST_PLUGINS_BASE_CFLAGS) $(GST_CFLAGS) $(THEORA_CFLAGS)
+libgsttheora_la_CFLAGS = $(GST_PLUGINS_BASE_CFLAGS) $(GST_BASE_CFLAGS) $(GST_CFLAGS) $(THEORA_CFLAGS)
 libgsttheora_la_LIBADD = \
 	$(top_builddir)/gst-libs/gst/tag/libgsttag-$(GST_MAJORMINOR).la \
 	$(top_builddir)/gst-libs/gst/video/libgstvideo-$(GST_MAJORMINOR).la \
+	$(GST_BASE_LIBS) \
 	$(GST_LIBS) \
 	$(THEORA_LIBS)
 libgsttheora_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
