clock: use the new gst_clock_id_wait_async_full.
Use the new gst_clock_id_wait_async_full in gst_clock_set_master.
Also add some tests.

--- a/tests/check/Makefile.am
+++ b/tests/check/Makefile.am
@@ -86,6 +86,7 @@ check_PROGRAMS =				\
 	gst/gstpoll     			\
 	gst/gstsegment				\
 	gst/gstsystemclock			\
+	gst/gstclock				\
 	gst/gststructure			\
 	gst/gsttag				\
 	gst/gsttagsetter			\
