po: Use proper gsettings schema file

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,4 +1,4 @@
-ext/gsettings/org.freedesktop.gstreamer.gschema.xml.in
+ext/gsettings/org.freedesktop.gstreamer.default-elements.gschema.xml.in
 ext/resindvd/resindvdsrc.c
 ext/sndfile/gstsfsink.c
 ext/sndfile/gstsfsrc.c
