basesink: add new enable-last-buffer property.
Add a new enable-last-buffer property. When false, it disables storing the last
received buffer in basesink::last-buffer. This can be useful in cases where
buffers need to be released asap.

API: GstBaseSink::enable-last-buffer

--- a/tests/check/Makefile.am
+++ b/tests/check/Makefile.am
@@ -64,6 +64,7 @@ REGISTRY_CHECKS =				\
 	elements/multiqueue			\
 	elements/tee			  	\
 	libs/basesrc				\
+	libs/basesink				\
 	libs/controller				\
 	libs/typefindhelper			\
 	pipelines/stress			\
