docs: dist more of the gst-plugin-base design docs

--- a/docs/design/Makefile.am
+++ b/docs/design/Makefile.am
@@ -1,4 +1,9 @@
 SUBDIRS =
 
 
-EXTRA_DIST = design-decodebin.txt design-orc-integration.txt
+EXTRA_DIST = \
+	design-decodebin.txt       \
+	design-orc-integration.txt \
+	draft-keyframe-force.txt   \
+	draft-va.txt               \
+	part-playbin2.txt
