vdpau: add mpeg4 part2 decoder

--- a/sys/vdpau/Makefile.am
+++ b/sys/vdpau/Makefile.am
@@ -13,7 +13,10 @@ libgstvdpau_la_SOURCES = \
 	h264/gsth264parser.c \
 	h264/gsth264frame.c \
 	h264/gsth264dpb.c \
-	h264/gstvdph264dec.c
+	h264/gstvdph264dec.c \
+	mpeg4/mpeg4util.c \
+	mpeg4/gstmpeg4frame.c \
+	mpeg4/gstvdpmpeg4dec.c
 
 libgstvdpau_la_CFLAGS = $(GST_PLUGINS_BASE_CFLAGS) $(GST_CFLAGS) $(X11_CFLAGS) $(VDPAU_CFLAGS)
 
@@ -36,4 +39,7 @@ noinst_HEADERS = \
 	h264/gsth264parser.h \
 	h264/gsth264frame.h \
 	h264/gsth264dpb.h \
-	h264/gstvdph264dec.h
+	h264/gstvdph264dec.h \
+	mpeg4/mpeg4util.h \
+	mpeg4/gstmpeg4frame.h \
+	mpeg4/gstvdpmpeg4dec.h
