duplicate code from gstscreenshot.{c,h} and gstplaysink.{c,h}

--- a/ges/Makefile.am
+++ b/ges/Makefile.am
@@ -35,6 +35,7 @@ libges_@GST_MAJORMINOR@_la_SOURCES = 		\
 	ges-track-audio-test-source.c			\
 	ges-track-title-source.c			\
 	ges-track-text-overlay.c			\
+	ges-screenshot.c				\
 	ges-utils.c
 
 libges_@GST_MAJORMINOR@includedir = $(includedir)/gstreamer-@GST_MAJORMINOR@/ges/
@@ -67,6 +68,7 @@ libges_@GST_MAJORMINOR@include_HEADERS = 	\
 	ges-track-audio-test-source.h			\
 	ges-track-title-source.h			\
 	ges-track-text-overlay.h			\
+	ges-screenshot.h
 	ges-utils.h
 
 libges_@GST_MAJORMINOR@_la_CFLAGS = -I$(top_srcdir) $(GST_PROFILE_CFLAGS) $(GST_DISCOVERER_CFLAGS) $(GST_CONTROLLER_CFLAGS) $(GST_PLUGINS_BASE_CFLAGS) $(GST_CFLAGS)
