debugutils: new element cpureport
cpureport posts bus messages after every buffer received of cpu used, system
clock time, buffer time

--- a/gst/debugutils/Makefile.am
+++ b/gst/debugutils/Makefile.am
@@ -7,6 +7,7 @@ endif
 plugin_LTLIBRARIES = $(EFENCE_PLUGIN) libgstdebug.la libgstnavigationtest.la 
 
 noinst_HEADERS = \
+	cpureport.h \
 	efence.h \
 	gstcapsdebug.h \
 	gstcapssetter.h \
@@ -42,6 +43,7 @@ libgstdebug_la_SOURCES = \
 	rndbuffersize.c \
 	progressreport.c \
 	tests.c \
+	cpureport.c \
 	testplugin.c
 
 # 	negotiation.c
