--- a/sys/vdpau/gstvdp/Makefile.am
+++ b/sys/vdpau/gstvdp/Makefile.am
@@ -3,6 +3,8 @@ lib_LTLIBRARIES = libgstvdp-@GST_MAJORMINOR@.la
 libgstvdp_@GST_MAJORMINOR@_la_SOURCES = \
 	gstvdpdevice.c \
 	gstvdputils.c \
+	gstvdpbuffer.c \
+	gstvdpbufferpool.c \
 	gstvdpvideobuffer.c \
 	gstvdpoutputbuffer.c \
 	gstvdpvideosrcpad.c \
@@ -14,6 +16,8 @@ libgstvdp_@GST_MAJORMINOR@includedir = $(includedir)/gstreamer-@GST_MAJORMINOR@/
 libgstvdp_@GST_MAJORMINOR@include_HEADERS = \
 	gstvdpdevice.h \
 	gstvdputils.h \
+	gstvdpbuffer.h \
+	gstvdpbufferpool.h \
 	gstvdpvideobuffer.h \
 	gstvdpoutputbuffer.h \
 	gstvdpvideosrcpad.h \
