coloreffects: new plugin for lookup table color mapping
Implements a color lookup table filter with 4 presets:
 - heat: fake heat camera effect
 - sepia: sepia toning
 - xray: invert + shade to blue
 - xpro: cross process

https://bugzilla.gnome.org/show_bug.cgi?id=625817

--- a/configure.ac
+++ b/configure.ac
@@ -1677,6 +1677,7 @@ gst/autoconvert/Makefile
 gst/bayer/Makefile
 gst/camerabin/Makefile
 gst/cdxaparse/Makefile
+gst/coloreffects/Makefile
 gst/dataurisrc/Makefile
 gst/dccp/Makefile
 gst/debugutils/Makefile
