geometrictransform: new filter "stretch"
Ports gleffects "stretch" filter to geometrictransform.
Shrinks the image around the center and gradually return to normal zoom
creating funny caricatures.

https://bugzilla.gnome.org/show_bug.cgi?id=625722

--- a/gst/geometrictransform/Makefile.am
+++ b/gst/geometrictransform/Makefile.am
@@ -11,7 +11,8 @@ libgstgeometrictransform_la_SOURCES = plugin.c \
                                       gstpinch.c \
                                       gstsphere.c \
                                       gsttwirl.c \
-                                      gstwaterripple.c
+                                      gstwaterripple.c \
+                                      gststretch.c
 
 libgstgeometrictransform_la_CFLAGS = $(GST_CFLAGS) $(GST_BASE_CFLAGS) \
 			    $(GST_PLUGINS_BASE_CFLAGS) \
@@ -35,4 +36,5 @@ noinst_HEADERS = gstgeometrictransform.h \
                  gstpinch.h \
                  gstsphere.h \
                  gsttwirl.h \
-                 gstwaterripple.h
+                 gstwaterripple.h \
+                 gststretch.h
