geometrictransform: new filter "tunnel"
Ports gleffects "tunnel" filter to geometrictransform.
Do nothing in a circle around the center and zoom outside.

https://bugzilla.gnome.org/show_bug.cgi?id=625722

--- a/gst/geometrictransform/Makefile.am
+++ b/gst/geometrictransform/Makefile.am
@@ -13,7 +13,8 @@ libgstgeometrictransform_la_SOURCES = plugin.c \
                                       gsttwirl.c \
                                       gstwaterripple.c \
                                       gststretch.c \
-                                      gstbulge.c
+                                      gstbulge.c \
+                                      gsttunnel.c
 
 libgstgeometrictransform_la_CFLAGS = $(GST_CFLAGS) $(GST_BASE_CFLAGS) \
 			    $(GST_PLUGINS_BASE_CFLAGS) \
@@ -39,4 +40,5 @@ noinst_HEADERS = gstgeometrictransform.h \
                  gsttwirl.h \
                  gstwaterripple.h \
                  gststretch.h \
-                 gstbulge.h
+                 gstbulge.h \
+                 gsttunnel.h
