geometrictransform: new filter "square"
Ports gleffects "square" filter to geometrictransform.
Maps a region around the center into a zoomed square and smoothly get
back to normal zoom. With faces it makes a funny "cube-face" effect.

https://bugzilla.gnome.org/show_bug.cgi?id=625722

--- a/gst/geometrictransform/Makefile.am
+++ b/gst/geometrictransform/Makefile.am
@@ -14,7 +14,8 @@ libgstgeometrictransform_la_SOURCES = plugin.c \
                                       gstwaterripple.c \
                                       gststretch.c \
                                       gstbulge.c \
-                                      gsttunnel.c
+                                      gsttunnel.c \
+                                      gstsquare.c
 
 libgstgeometrictransform_la_CFLAGS = $(GST_CFLAGS) $(GST_BASE_CFLAGS) \
 			    $(GST_PLUGINS_BASE_CFLAGS) \
@@ -41,4 +42,5 @@ noinst_HEADERS = gstgeometrictransform.h \
                  gstwaterripple.h \
                  gststretch.h \
                  gstbulge.h \
-                 gsttunnel.h
+                 gsttunnel.h \
+                 gstsquare.h
