geometrictransform: new filter "mirror"
Ports gleffects "mirror" filter to geometrictransform.
Simple yet effective mirror effect, splits the image into halves and
reflect the first into the second.

https://bugzilla.gnome.org/show_bug.cgi?id=625722

--- a/gst/geometrictransform/Makefile.am
+++ b/gst/geometrictransform/Makefile.am
@@ -15,7 +15,8 @@ libgstgeometrictransform_la_SOURCES = plugin.c \
                                       gststretch.c \
                                       gstbulge.c \
                                       gsttunnel.c \
-                                      gstsquare.c
+                                      gstsquare.c \
+                                      gstmirror.c
 
 libgstgeometrictransform_la_CFLAGS = $(GST_CFLAGS) $(GST_BASE_CFLAGS) \
 			    $(GST_PLUGINS_BASE_CFLAGS) \
@@ -43,4 +44,5 @@ noinst_HEADERS = gstgeometrictransform.h \
                  gststretch.h \
                  gstbulge.h \
                  gsttunnel.h \
-                 gstsquare.h
+                 gstsquare.h \
+                 gstmirror.h
