geometrictransform: new filter "fisheye"
Ports gleffects "fisheye" filter to geometrictransform.
Fake fisheye lens filter. Somewhat empiric implementation because I
didn't find any good algorithm that does it with nice results.

https://bugzilla.gnome.org/show_bug.cgi?id=625722

--- a/gst/geometrictransform/Makefile.am
+++ b/gst/geometrictransform/Makefile.am
@@ -16,7 +16,8 @@ libgstgeometrictransform_la_SOURCES = plugin.c \
                                       gstbulge.c \
                                       gsttunnel.c \
                                       gstsquare.c \
-                                      gstmirror.c
+                                      gstmirror.c \
+                                      gstfisheye.c
 
 libgstgeometrictransform_la_CFLAGS = $(GST_CFLAGS) $(GST_BASE_CFLAGS) \
 			    $(GST_PLUGINS_BASE_CFLAGS) \
@@ -45,4 +46,5 @@ noinst_HEADERS = gstgeometrictransform.h \
                  gstbulge.h \
                  gsttunnel.h \
                  gstsquare.h \
-                 gstmirror.h
+                 gstmirror.h \
+                 gstfisheye.h
